# tabsus

./: README.md  exemplo.ipynb  setup.cfg
src/tabsus/: __init__.py  dataframe.py  file_loader.py  parse_helper.py  wrapper.py
src/tabsus/conversion/: __init__.py  dbf.py  loader.py
src/tabsus/conversion/cnv/: __init__.py  lookup.py  parser.py
src/tabsus/definition/: __init__.py  access.py  parser.py
tests/resources/: CID10-Evit5a74grupos.cnv  sample.dbf  teste.dbf
tests/resources/SIH/: Motivo de Erro.DEF  RD2008.DEF  RJ2008.DEF  SP2008.DEF
tests/resources/SIH/CNV/: AGLBR.CNV  ANOMES.CNV  ANOMESC.CNV  ANOv1.CNV  ANOv2.CNV  AUTORIZ.CNV  AgravoBloq.CNV  AgravoBloqS.CNV  AgravoNot.CNV  AgravoNotS.CNV  BRUFMUNIC.CNV  CAPITAL.CNV  CARATEND.CNV  CARATENDc.CNV  CBO2002.cnv  CID10CAC.CNV  CID10CAP.CNV  CID10GRUPO.CNV  CID10GRUPOC.CNV  CID10GRUPOS.CNV  CID10_01.CNV  CID10_02.CNV  CID10_03.CNV  CID10_04.CNV  CID10_05.CNV  CID10_06.CNV  CID10_07.CNV  CID10_08.CNV  CID10_09.CNV  CID10_10.CNV  CID10_11.CNV  CID10_12.CNV  CID10_13.CNV  CID10_14.CNV  CID10_15.CNV  CID10_16.CNV  CID10_17.CNV  CID10_18.CNV  CID10_19.CNV  CID10_20.CNV  (+120 more)
tests/resources/SIH/DBF/: CADHOSP.DBF  CBO.dbf  HUF_FILIAL.dbf  HUF_MEC.dbf  LIBGESTOR.dbf  MOTERRO.dbf  P040601.dbf  P040602.dbf  P040603.DBF  P040604.DBF  P040605.DBF  S_CLASSEN.DBF  TB_FORMA.DBF  TB_GRUPO.DBF  TB_SIGTAP.dbf  TB_SUBGR.DBF  TCHAC.dbf  TCHAL.dbf  TCHAM.dbf  TCHAP.dbf  TCHBA.dbf  (+54 more)
tests/tabsus/: test_conversion.py  test_conversion_loader.py  test_dataframe.py  test_dbf.py  test_definition.py  test_file_loader.py  test_wrapper.py
(+1 files in other folders)
