[metadata]
name = tabsus
version = 0.0.1
author = Gustavo Sousa
author_email = gustavocms@acm.org
description = Library for processing DATASUS database files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gcms/tabsus
project_urls =
    Source Code = https://github.com/gcms/tabsus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    intervaltree>=3.1.0
    nocasedict>=1.0.2
    dbfread==2.0.7
    pandas>=1.2.3
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
test =


[options.packages.find]
where = src